--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # created by virtualenv automatically
 .idea/
 SentimentAnalyzer/.idea
-SentimentAnalyzer/eng_sentimentAnalyzer.h5
-SentimentAnalyzer/tokenizer.json
+# SentimentAnalyzer/eng_sentimentAnalyzer.h5
+# SentimentAnalyzer/tokenizer.json
 SentimentAnalyzer/__pycache__
